removed scrollbars from screen. fixed network joining

--- a/public/stylesheets/css.styl
+++ b/public/stylesheets/css.styl
@@ -3,6 +3,8 @@
 body, html
 	width 100%
 	height 100%
+	margin 0
+	padding 0
 	font-family monospace
 	-webkit-touch-callout: none
 	-webkit-user-select: none
